--- a/resources/assets/scss/partials/_mobile.scss
+++ b/resources/assets/scss/partials/_mobile.scss
@@ -195,9 +195,11 @@ body.mobile-nav-open {
         outline: none;
         box-shadow: none;
 
-        &:focus {
+        &:focus,
+        &:active {
             outline: none;
             box-shadow: none;
+            border: none;
         }
 
         &::placeholder {
